apps/guacamole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    app: guacd
  ports:
    - name: guacd
      port: 4822
      targetPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: guac
  namespace: guacamole
spec:
  selector:
    app: guac
  ports:
    - name: http
      port: 8080
      targetPort: 8080
